Fix text wrap on image

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,6 @@ img {
   width: 35%;
 }
 
-.body {
+.wrap {
   float: left;
 }
